proyecto 08 agosto final2

--- a/Pages/shop.html
+++ b/Pages/shop.html
@@ -51,7 +51,7 @@
     
     <footer>
         <div class="contenedorfooter"> 
-            <a href="https://www.instagram.com/viubikinis/" target="_blank"> <img src="../Imagenes/square-instagram.svg" alt="logo instagram" width="50px" ></a>
+            <a href="https://www.instagram.com/viu.oficial/" target="_blank"> <img src="../Imagenes/square-instagram.svg" alt="logo instagram" width="50px" ></a>
             <a href="https://www.facebook.com/viu.bikinis/" target="_blank"> <img src="../Imagenes/square-facebook.svg" alt="logo facebook" width="50px" ></a>
             <a href="https://mail.google.com/mail/u/0/#inbox?compose=CllgCKCJFLbbzFMSQkDlqhzNKxZbFCQPJxVPhXPQzSjLfNDMbfZsVBSplTFDtZbrkTvXqfLjKfL" target="_blank"> <img src="../Imagenes/square-envelope-solid.svg" alt="logo mail" width="50px" ></a>
         </div>
