--- a/Pages/contact.html
+++ b/Pages/contact.html
@@ -3,13 +3,19 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Contactanos a través de un formulario: conocé el estado de tu pedido, estado de envío o gestioná devoluciones.">
+    <meta name="keywords" content="Viu, bikini, fitness, hoodie, jogger, contact, contacto, comunicacion, telefono, email, consulta, información">
+    <link
+    rel="stylesheet"
+    href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
+    />
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9" crossorigin="anonymous">
     <link rel="stylesheet" href="../css/estilo.css">
     <link rel="shortcut icon" href="../Imagenes/favicon.ico" type="image/x-icon">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Tinos:ital,wght@0,400;0,700;1,400;1,700&display=swap" rel="stylesheet">
-    <title>Viu Bkn</title>
+    <title>Contact</title>
 </head>
 
 <body>
@@ -42,7 +48,7 @@
         <section class="contenedorformulario"> 
             <h5>Formulario de contacto</h5>
 
-            <div class="formulario">
+            <div class="formulario animate__animated animate__zoomIn">
                 <form>
                     <div class="mb-3 itemsform">
                         <label for="exampleInputEmail1" class="form-label">Nombre</label>
@@ -72,13 +78,11 @@
     </main>
     
     <footer>
-        <div class="contenedorfooter"> 
-            <a href="https://www.instagram.com/viu.oficial" target="_blank"> <img src="../Imagenes/square-instagram.svg" alt="logo instagram" width="50px" ></a>
-            <a href="https://www.facebook.com/viu.bikinis/" target="_blank"> <img src="../Imagenes/square-facebook.svg" alt="logo facebook" width="50px" ></a>
-            <a href="https://mail.google.com/mail/u/0/#inbox?compose=CllgCKCJFLbbzFMSQkDlqhzNKxZbFCQPJxVPhXPQzSjLfNDMbfZsVBSplTFDtZbrkTvXqfLjKfL" target="_blank"> <img src="../Imagenes/square-envelope-solid.svg" alt="logo mail" width="50px" ></a>
-        </div>        
-
+        <a href="https://www.instagram.com/viu.oficial/" target="_blank"> <img src="../Imagenes/square-instagram.svg" alt="logo instagram" width="50px" ></a>
+        <a href="https://www.facebook.com/viu.bikinis/" target="_blank"> <img src="../Imagenes/square-facebook.svg" alt="logo facebook" width="50px" ></a>
+        <a href="https://mail.google.com/mail/u/0/#inbox?compose=CllgCKCJFLbbzFMSQkDlqhzNKxZbFCQPJxVPhXPQzSjLfNDMbfZsVBSplTFDtZbrkTvXqfLjKfL" target="_blank"> <img src="../Imagenes/square-envelope-solid.svg" alt="logo mail" width="50px" ></a>     
     </footer>
+
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm" crossorigin="anonymous"></script>
 </body>
 </html>
