--- a/Pages/shop.html
+++ b/Pages/shop.html
@@ -3,13 +3,15 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Shop online de línea bikinis, línea fitness y línea urbana. Comprá y recibí tu pedido desde la comodidad de tu casa.">
+    <meta name="keywords" content="Viu, bikini, shop, online, tienda, compras, fitness, deportivo, hoodie, jogger, buzo, jogging, malla, traje de baño, style, cloth, clothing, design">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9" crossorigin="anonymous">
     <link rel="stylesheet" href="../css/estilo.css">
     <link rel="shortcut icon" href="../Imagenes/favicon.ico" type="image/x-icon">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Tinos:ital,wght@0,400;0,700;1,400;1,700&display=swap" rel="stylesheet">
-    <title>Viu Bkn</title>
+    <title>Shop</title>
 </head>
 
 <body>
@@ -39,9 +41,9 @@
         </div>
 
         <section class="section3">
-            <img class="ordena" src="../Imagenes/aurora jpg.jpg" alt="imagen bikini">
-            <img class="ordenb" src="../Imagenes/IMG_6313.jpg" alt="imagen sport">
-            <img class="ordenc" src="../Imagenes/IMG_1727.JPEG" alt="imagen urban">
+            <img class="ordena" src="../Imagenes/aurora jpg.jpg" alt="imagen bikini Aurora">
+            <img class="ordenb" src="../Imagenes/IMG_6313.jpg" alt="imagen conjunto Andrómeda ">
+            <img class="ordenc" src="../Imagenes/IMG_1727.JPEG" alt="imagen conuunto urban Camel">
            
             <h5 class="ordend">Swimwear</h5>
             <h5 class="ordene">Sportwear</h5>
@@ -50,11 +52,9 @@
     </main>
     
     <footer>
-        <div class="contenedorfooter"> 
-            <a href="https://www.instagram.com/viu.oficial/" target="_blank"> <img src="../Imagenes/square-instagram.svg" alt="logo instagram" width="50px" ></a>
-            <a href="https://www.facebook.com/viu.bikinis/" target="_blank"> <img src="../Imagenes/square-facebook.svg" alt="logo facebook" width="50px" ></a>
-            <a href="https://mail.google.com/mail/u/0/#inbox?compose=CllgCKCJFLbbzFMSQkDlqhzNKxZbFCQPJxVPhXPQzSjLfNDMbfZsVBSplTFDtZbrkTvXqfLjKfL" target="_blank"> <img src="../Imagenes/square-envelope-solid.svg" alt="logo mail" width="50px" ></a>
-        </div>
+      <a href="https://www.instagram.com/viu.oficial/" target="_blank"> <img src="../Imagenes/square-instagram.svg" alt="logo instagram" width="50px" ></a>
+      <a href="https://www.facebook.com/viu.bikinis/" target="_blank"> <img src="../Imagenes/square-facebook.svg" alt="logo facebook" width="50px" ></a>
+      <a href="https://mail.google.com/mail/u/0/#inbox?compose=CllgCKCJFLbbzFMSQkDlqhzNKxZbFCQPJxVPhXPQzSjLfNDMbfZsVBSplTFDtZbrkTvXqfLjKfL" target="_blank"> <img src="../Imagenes/square-envelope-solid.svg" alt="logo mail" width="50px" ></a>     
     </footer>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm" crossorigin="anonymous"></script>
