--- a/index.html
+++ b/index.html
@@ -3,13 +3,17 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="description" content="Viu es una marca de ropa versátil, que incluye línea de biknis, línea fitness y línea urbana. Contamos con envíos a todo el país.">
+  <meta name="keywords" content="Viu, bikini, fitness, hoodie, jogger, clothing, style, design, compras online, shipping">
+  <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9" crossorigin="anonymous">
   <link rel="stylesheet" href="./css/estilo.css">
   <link rel="shortcut icon" href="./Imagenes/favicon.ico" type="image/x-icon">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Tinos:ital,wght@0,400;0,700;1,400;1,700&display=swap" rel="stylesheet">
-  <title>Viu Bkn</title>
+  <title>Home</title>
 </head>
 
 <body>
@@ -44,34 +48,34 @@
       </div>
       <div class="carousel-inner">
         <div class="carousel-item active">
-          <img src="./Imagenes/c1.png" alt="...">
+          <img src="./Imagenes/c1.png" alt="bikini emilia">
         </div>
         <div class="carousel-item">
-          <img src="./Imagenes/c2.png" alt="...">
+          <img src="./Imagenes/c2.png" alt="conjunto andrómeda">
         </div>
         <div class="carousel-item">
-          <img src="./Imagenes/c3.png" alt="...">
+          <img src="./Imagenes/c3.png" alt="bikini martina">
         </div>
         <div class="carousel-item">
-          <img src="./Imagenes/c4.png" alt="...">
+          <img src="./Imagenes/c4.png" alt="conjunto hoodie y jogger camel">
         </div>
         <div class="carousel-item">
-          <img src="./Imagenes/c5.png" alt="...">
+          <img src="./Imagenes/c5.png" alt="bikini helena">
         </div>
         <div class="carousel-item">
-          <img src="./Imagenes/c6.png" alt="...">
+          <img src="./Imagenes/c6.png" alt="conjunto hydra">
         </div>
         <div class="carousel-item">
-          <img src="./Imagenes/c7.png" alt="...">
+          <img src="./Imagenes/c7.png" alt="bikini federica">
         </div>
         <div class="carousel-item">
-          <img src="./Imagenes/c33.png" alt="...">
+          <img src="./Imagenes/c33.png" alt="conjunto hoodie y jogger xx">
         </div>
         <div class="carousel-item">
-          <img src="./Imagenes/c9.png" alt="...">
+          <img src="./Imagenes/c9.png" alt="bikini julia">
         </div>
         <div class="carousel-item">
-          <img src="./Imagenes/c10.png" alt="...">
+          <img src="./Imagenes/c10.png" alt="conjunto libra">
         </div>
       </div>
       <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
@@ -86,7 +90,7 @@
         
   <a class="logowhatsapp" href="https://wa.link/knaxgf" target="_blank"> <img src="./Imagenes/Whatsapp.png" alt="logo whatsapp"></a>
 
-    <section class="section1">
+    <section data-aos="fade-right" class="section1">
       <p>
         Creemos que la manera en que nos vestimos representa nuestra personalidad, nuestra energía, al fin y al cabo representa lo que somos y como estamos.     
           
@@ -98,13 +102,13 @@
 
     <section class="section2">
       <div class="ordena">
-        <img src="./Imagenes/credit-card-solid.svg" alt="">
+        <img src="./Imagenes/credit-card-solid.svg" alt="imagen tarjeta de credito">
       </div>
       <div class="ordenb">
-        <img src="./Imagenes/truck-solid.svg" alt="">
+        <img src="./Imagenes/truck-solid.svg" alt="imagen transporte">
       </div>
       <div class="ordenc">
-        <img src="./Imagenes/square-whatsapp.svg" alt="">
+        <img src="./Imagenes/square-whatsapp.svg" alt="imagen whatsapp">
       </div>
       <div class="ordend">
         <h5>3 cuotas sin interés</h5>
@@ -125,5 +129,9 @@
   </footer>
 
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm" crossorigin="anonymous"></script>
+  <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+  <script>
+    AOS.init();
+  </script>
 </body>
 </html>
