--- a/Pages/about.html
+++ b/Pages/about.html
@@ -12,7 +12,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Tinos:ital,wght@0,400;0,700;1,400;1,700&display=swap" rel="stylesheet">
-    <title>About</title>
+    <title>Viu | About</title>
 </head>
 
 <body>
@@ -44,11 +44,11 @@
         </p>
 
         <section class="section4"> 
-            <img src="../Imagenes/IM1.png" alt="imagen emilia">
+            <img src="../Imagenes/IM1b.png" alt="imagen emilia">
             
-            <img src="../Imagenes/IM3.png" alt="imagen marta">
+            <img src="../Imagenes/IM3b.png" alt="imagen marta">
             
-            <img src="../Imagenes/IM5.png"alt="imagen julia">
+            <img src="../Imagenes/IM5b.png"alt="imagen julia">
         </section>
 
         <p data-aos="fade-right">
