--- a/Pages/promotions.html
+++ b/Pages/promotions.html
@@ -11,7 +11,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Tinos:ital,wght@0,400;0,700;1,400;1,700&display=swap" rel="stylesheet">
-    <title>Promotions</title>
+    <title>Viu | Promotions</title>
 </head>
 
 <body>
@@ -40,9 +40,9 @@
         </div>
 
         <section class="section3">
-            <img class="ordena" src="../Imagenes/IMG_0911.jpg" alt="imagen bikini Olivia">
-            <img class="ordenb" src="../Imagenes/IMG_1333.jpg" alt="imagen bikini Catalina">
-            <img class="ordenc" src="../Imagenes/IMG_1216.jpg" alt="imagen bikini Federica">
+            <img class="ordena" src="../Imagenes/IMG_0911b.png" alt="imagen bikini Olivia">
+            <img class="ordenb" src="../Imagenes/IMG_1333b.jpg" alt="imagen bikini Catalina">
+            <img class="ordenc" src="../Imagenes/IMG_1216b.png" alt="imagen bikini Federica">
             
             <h5 class="ordend">Bikini Olivia</h5>
             <h5 class="ordene">Bikini Catalina</h5>
@@ -50,9 +50,9 @@
         </section>
 
         <section class="section3">        
-            <img class="ordena" src="../Imagenes/IMG_7759.JPG" alt="imagen Conjunto deportivo Libra">
-            <img class="ordenb" src="../Imagenes/IMG_7839.JPG" alt="imagen Conjunto deportivo Scorpius">
-            <img class="ordenc" src="../Imagenes/IMG_1957.JPEG" alt="imagen Hoodie Laters">
+            <img class="ordena" src="../Imagenes/IMG_7759b .png" alt="imagen Conjunto deportivo Libra">
+            <img class="ordenb" src="../Imagenes/IMG_7839b .png" alt="imagen Conjunto deportivo Scorpius">
+            <img class="ordenc" src="../Imagenes/IMG_1957b.png" alt="imagen Hoodie Laters">
             
             <h5 class="ordend">Conjunto Libra</h5>
             <h5 class="ordene">Conjunto Scorpius</h5>
