--- a/Pages/shop.html
+++ b/Pages/shop.html
@@ -11,7 +11,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Tinos:ital,wght@0,400;0,700;1,400;1,700&display=swap" rel="stylesheet">
-    <title>Shop</title>
+    <title>Viu | Shop</title>
 </head>
 
 <body>
@@ -41,9 +41,9 @@
         </div>
 
         <section class="section3">
-            <img class="ordena" src="../Imagenes/aurora jpg.jpg" alt="imagen bikini Aurora">
-            <img class="ordenb" src="../Imagenes/IMG_6313.jpg" alt="imagen conjunto Andrómeda ">
-            <img class="ordenc" src="../Imagenes/IMG_1727.JPEG" alt="imagen conuunto urban Camel">
+            <img class="ordena" src="../Imagenes/aurora b.png" alt="imagen bikini Aurora">
+            <img class="ordenb" src="../Imagenes/IMG_6313b .png" alt="imagen conjunto Andrómeda ">
+            <img class="ordenc" src="../Imagenes/IMG_1727b .png" alt="imagen conuunto urban Camel">
            
             <h5 class="ordend">Swimwear</h5>
             <h5 class="ordene">Sportwear</h5>
