--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Tinos:ital,wght@0,400;0,700;1,400;1,700&display=swap" rel="stylesheet">
-  <title>Home</title>
+  <title>Viu | Home</title>
 </head>
 
 <body>
@@ -48,34 +48,34 @@
       </div>
       <div class="carousel-inner">
         <div class="carousel-item active">
-          <img src="./Imagenes/c1.png" alt="bikini emilia">
+          <img src="./Imagenes/c1b.png" alt="bikini emilia">
         </div>
         <div class="carousel-item">
-          <img src="./Imagenes/c2.png" alt="conjunto andrómeda">
+          <img src="./Imagenes/c2b.png" alt="conjunto andrómeda">
         </div>
         <div class="carousel-item">
-          <img src="./Imagenes/c3.png" alt="bikini martina">
+          <img src="./Imagenes/c3b.png" alt="bikini martina">
         </div>
         <div class="carousel-item">
-          <img src="./Imagenes/c4.png" alt="conjunto hoodie y jogger camel">
+          <img src="./Imagenes/c4b.png" alt="conjunto hoodie y jogger camel">
         </div>
         <div class="carousel-item">
-          <img src="./Imagenes/c5.png" alt="bikini helena">
+          <img src="./Imagenes/c5b.png" alt="bikini helena">
         </div>
         <div class="carousel-item">
-          <img src="./Imagenes/c6.png" alt="conjunto hydra">
+          <img src="./Imagenes/c6b.png" alt="conjunto hydra">
         </div>
         <div class="carousel-item">
-          <img src="./Imagenes/c7.png" alt="bikini federica">
+          <img src="./Imagenes/c7b.png" alt="bikini federica">
         </div>
         <div class="carousel-item">
-          <img src="./Imagenes/c33.png" alt="conjunto hoodie y jogger xx">
+          <img src="./Imagenes/c33b.png" alt="conjunto hoodie y jogger xx">
         </div>
         <div class="carousel-item">
-          <img src="./Imagenes/c9.png" alt="bikini julia">
+          <img src="./Imagenes/c9b.png" alt="bikini julia">
         </div>
         <div class="carousel-item">
-          <img src="./Imagenes/c10.png" alt="conjunto libra">
+          <img src="./Imagenes/c10b.png" alt="conjunto libra">
         </div>
       </div>
       <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
@@ -102,7 +102,7 @@
 
     <section class="section2">
       <div class="ordena">
-        <img src="./Imagenes/credit-card-solid.svg" alt="imagen tarjeta de credito">
+        <img src="./Imagenes/credit-card-solid.svg" alt="imagen git putarjeta de credito">
       </div>
       <div class="ordenb">
         <img src="./Imagenes/truck-solid.svg" alt="imagen transporte">
