--- a/Pages/contact.html
+++ b/Pages/contact.html
@@ -78,10 +78,10 @@
     </main>
     
     <footer>
-        <a href="https://www.instagram.com/viu.oficial/" target="_blank"> <img src="../Imagenes/square-instagram.svg" alt="logo instagram" width="50px" ></a>
-        <a href="https://www.facebook.com/viu.bikinis/" target="_blank"> <img src="../Imagenes/square-facebook.svg" alt="logo facebook" width="50px" ></a>
-        <a href="https://mail.google.com/mail/u/0/#inbox?compose=CllgCKCJFLbbzFMSQkDlqhzNKxZbFCQPJxVPhXPQzSjLfNDMbfZsVBSplTFDtZbrkTvXqfLjKfL" target="_blank"> <img src="../Imagenes/square-envelope-solid.svg" alt="logo mail" width="50px" ></a>     
-    </footer>
+        <a href="https://www.instagram.com/viu.oficial/" target="_blank"> <img src="../Imagenes/square-instagram blanco.png" alt="logo instagram" width="50px" ></a>
+        <a href="https://www.facebook.com/viu.bikinis/" target="_blank"> <img src="../Imagenes/square-facebook blanco.png" alt="logo facebook" width="50px" ></a>
+        <a href="https://mail.google.com/mail/u/0/#inbox?compose=CllgCKCJFLbbzFMSQkDlqhzNKxZbFCQPJxVPhXPQzSjLfNDMbfZsVBSplTFDtZbrkTvXqfLjKfL" target="_blank"> <img src="../Imagenes/square-envelope-solid blanco.png" alt="logo mail" width="50px" ></a>     
+      </footer>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm" crossorigin="anonymous"></script>
 </body>
