--- a/Pages/shop.html
+++ b/Pages/shop.html
@@ -41,9 +41,9 @@
         </div>
 
         <section class="section3">
-            <img class="ordena" src="../Imagenes/aurora b.png" alt="imagen bikini Aurora">
-            <img class="ordenb" src="../Imagenes/IMG_6313b .png" alt="imagen conjunto Andrómeda ">
-            <img class="ordenc" src="../Imagenes/IMG_1727b .png" alt="imagen conuunto urban Camel">
+            <img class="ordena" src="../Imagenes/aurora e.jpg" alt="imagen bikini Aurora">
+            <img class="ordenb" src="../Imagenes/IMG_6313c .jpg" alt="imagen conjunto Andrómeda ">
+            <img class="ordenc" src="../Imagenes/IMG_1727c .jpg" alt="imagen conuunto urban Camel">
            
             <h5 class="ordend">Swimwear</h5>
             <h5 class="ordene">Sportwear</h5>
@@ -52,9 +52,9 @@
     </main>
     
     <footer>
-      <a href="https://www.instagram.com/viu.oficial/" target="_blank"> <img src="../Imagenes/square-instagram.svg" alt="logo instagram" width="50px" ></a>
-      <a href="https://www.facebook.com/viu.bikinis/" target="_blank"> <img src="../Imagenes/square-facebook.svg" alt="logo facebook" width="50px" ></a>
-      <a href="https://mail.google.com/mail/u/0/#inbox?compose=CllgCKCJFLbbzFMSQkDlqhzNKxZbFCQPJxVPhXPQzSjLfNDMbfZsVBSplTFDtZbrkTvXqfLjKfL" target="_blank"> <img src="../Imagenes/square-envelope-solid.svg" alt="logo mail" width="50px" ></a>     
+      <a href="https://www.instagram.com/viu.oficial/" target="_blank"> <img src="../Imagenes/square-instagram blanco.png" alt="logo instagram" width="50px" ></a>
+      <a href="https://www.facebook.com/viu.bikinis/" target="_blank"> <img src="../Imagenes/square-facebook blanco.png" alt="logo facebook" width="50px" ></a>
+      <a href="https://mail.google.com/mail/u/0/#inbox?compose=CllgCKCJFLbbzFMSQkDlqhzNKxZbFCQPJxVPhXPQzSjLfNDMbfZsVBSplTFDtZbrkTvXqfLjKfL" target="_blank"> <img src="../Imagenes/square-envelope-solid blanco.png" alt="logo mail" width="50px" ></a>     
     </footer>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm" crossorigin="anonymous"></script>
