--- a/index.html
+++ b/index.html
@@ -48,34 +48,34 @@
       </div>
       <div class="carousel-inner">
         <div class="carousel-item active">
-          <img src="./Imagenes/c1b.png" alt="bikini emilia">
+          <img src="./Imagenes/c1c.jpg" alt="bikini emilia">
         </div>
         <div class="carousel-item">
-          <img src="./Imagenes/c2b.png" alt="conjunto andrómeda">
+          <img src="./Imagenes/c2c.jpg" alt="conjunto andrómeda">
         </div>
         <div class="carousel-item">
-          <img src="./Imagenes/c3b.png" alt="bikini martina">
+          <img src="./Imagenes/c3c.jpg" alt="bikini martina">
         </div>
         <div class="carousel-item">
-          <img src="./Imagenes/c4b.png" alt="conjunto hoodie y jogger camel">
+          <img src="./Imagenes/c4c.jpg" alt="conjunto hoodie y jogger camel">
         </div>
         <div class="carousel-item">
-          <img src="./Imagenes/c5b.png" alt="bikini helena">
+          <img src="./Imagenes/c5c.jpg" alt="bikini helena">
         </div>
         <div class="carousel-item">
-          <img src="./Imagenes/c6b.png" alt="conjunto hydra">
+          <img src="./Imagenes/c6c.jpg" alt="conjunto hydra">
         </div>
         <div class="carousel-item">
-          <img src="./Imagenes/c7b.png" alt="bikini federica">
+          <img src="./Imagenes/c7c.jpg" alt="bikini federica">
         </div>
         <div class="carousel-item">
-          <img src="./Imagenes/c33b.png" alt="conjunto hoodie y jogger xx">
+          <img src="./Imagenes/c33c.jpg" alt="conjunto hoodie y jogger xx">
         </div>
         <div class="carousel-item">
-          <img src="./Imagenes/c9b.png" alt="bikini julia">
+          <img src="./Imagenes/c9c.jpg" alt="bikini julia">
         </div>
         <div class="carousel-item">
-          <img src="./Imagenes/c10b.png" alt="conjunto libra">
+          <img src="./Imagenes/c10c.jpg" alt="conjunto libra">
         </div>
       </div>
       <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
@@ -102,13 +102,13 @@
 
     <section class="section2">
       <div class="ordena">
-        <img src="./Imagenes/credit-card-solid.svg" alt="imagen git putarjeta de credito">
+        <img src="./Imagenes/credit-card-solid blanca.png" alt="imagen git putarjeta de credito">
       </div>
       <div class="ordenb">
-        <img src="./Imagenes/truck-solid.svg" alt="imagen transporte">
+        <img src="./Imagenes/truck-solid blanca.png" alt="imagen transporte">
       </div>
       <div class="ordenc">
-        <img src="./Imagenes/square-whatsapp.svg" alt="imagen whatsapp">
+        <img src="./Imagenes/square-whatsapp blanca.png" alt="imagen whatsapp">
       </div>
       <div class="ordend">
         <h5>3 cuotas sin interés</h5>
@@ -123,9 +123,9 @@
   </main>
     
   <footer>
-    <a href="https://www.instagram.com/viu.oficial/" target="_blank"> <img src="./Imagenes/square-instagram.svg" alt="logo instagram" width="50px" ></a>
-    <a href="https://www.facebook.com/viu.bikinis/" target="_blank"> <img src="./Imagenes/square-facebook.svg" alt="logo facebook" width="50px" ></a>
-    <a href="https://mail.google.com/mail/u/0/#inbox?compose=CllgCKCJFLbbzFMSQkDlqhzNKxZbFCQPJxVPhXPQzSjLfNDMbfZsVBSplTFDtZbrkTvXqfLjKfL" target="_blank"> <img src="./Imagenes/square-envelope-solid.svg" alt="logo mail" width="50px" ></a>     
+    <a href="https://www.instagram.com/viu.oficial/" target="_blank"> <img src="./Imagenes/square-instagram blanco.png" alt="logo instagram" width="50px" ></a>
+    <a href="https://www.facebook.com/viu.bikinis/" target="_blank"> <img src="./Imagenes/square-facebook blanco.png" alt="logo facebook" width="50px" ></a>
+    <a href="https://mail.google.com/mail/u/0/#inbox?compose=CllgCKCJFLbbzFMSQkDlqhzNKxZbFCQPJxVPhXPQzSjLfNDMbfZsVBSplTFDtZbrkTvXqfLjKfL" target="_blank"> <img src="./Imagenes/square-envelope-solid blanco.png" alt="logo mail" width="50px" ></a>     
   </footer>
 
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm" crossorigin="anonymous"></script>
